# github_api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_deploy.yml  build_dploy.yml
app/: main.py
app/.github/: build_dploy.yml
app/core/: config.py
app/routers/: typing_svg.py
app/routers/demo_bot/: demo_bot.py
app/routers/typingsvg/: generate_svg.py  typing_svg.py
app/static/typing_svg/css/: loader.css  style.css
app/static/typing_svg/js/: jscolor.min.js  script.js  toggle-dark.js
app/templates/demo/: index.html
app/templates/typing_svg/: demo.html  main.html
app/utils/: google_font_convertor.py
